<resources>
    <string name="app_name">Randoo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab1">fab1</string>
    <string name="fab2">fab2</string>
    <string name="tasks_text_string">Tasks</string>
    <string name="new_task_string">New Task</string>
    <string name="new_task_button_string">Save</string>
    <string name="update_task_button_string">Update</string>
    <string name="menu_delete_string">Delete</string>
    <string name="enter_task">Enter task</string>
</resources>