<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/app_name"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.randoo.fragments.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.randoo.fragments.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_addFragment22"
            app:destination="@id/addFragment2" />
        <action
            android:id="@+id/action_mainFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment2"
        android:name="com.example.randoo.fragments.AddFragment"
        android:label="@string/new_task_string"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment2_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.randoo.fragments.UpdateFragment"
        android:label="@string/update_task_button_string">
        <action
            android:id="@+id/action_updateFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <argument
            android:name="currentTask"
            app:argType="com.example.randoo.model.Task" />
    </fragment>
</navigation>