<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_adding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_my_icon"
            app:fabCustomSize="64dp"
            android:layout_margin="16dp"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/fab1" />

        <!-- CHANGE THE FAB_RANDOM ICON!!! -->
        <!-- CHANGE THE FAB_RANDOM ICON!!! -->
        <!-- CHANGE THE FAB_RANDOM ICON!!! -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:focusable="true"
            android:src="@drawable/ic_fab_random"
            app:fabCustomSize="64dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fab_adding"
            android:contentDescription="@string/fab2" />

        <TextView
            android:id="@+id/tasks_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold|italic"
            android:text="@string/tasks_text_string"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:textSize="32sp">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tasks_text"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:nestedScrollingEnabled="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>